# mcr-py

./: .gitignore  Cargo.toml  README.md  mcr_py.pyi  pyproject.toml
.devcontainer/: devcontainer.json  install-dependencies.sh
notebooks/: 01_data_pipeline.ipynb  01a_area.ipynb  02_land_use.ipynb  04_mcr5_input.ipynb  10_mcr5.ipynb  11_mcr5.py  12_errors.ipynb  13_mcr5_results_calculation.ipynb  area.ipynb  footpaths.ipynb  land_use.ipynb  mcr5.ipynb  mcr5_input.ipynb  mcr_results.ipynb  mcraptor.ipynb  results.ipynb  to_mlc_csv.ipynb
notebooks/.ipynb_checkpoints/: mcr5-checkpoint.ipynb
python/mcr_py/: __init__.py  main.py
python/mcr_py/command/: __init__.py  build.py  footpaths.py  mcr.py  mcraptor_test.py  osm.py  raptor.py  raptor_test.py  step_config.py
python/mcr_py/package/: cache.py  console.py  footpaths.py  geometa.py  h3.py  key.py  logger.py  output.py  storage.py  strtime_test.py
src/: conftest.py  lib.rs  main.py
src/command/: build.py  footpaths.py  mcr.py  mcraptor_test.py  osm.py  raptor.py  raptor_test.py  step_config.py
src/command/gtfs/: gtfs.py  read.py
src/package/: cache.py  footpaths.py  geometa.py  h3.py  key.py  output.py  storage.py  strtime_test.py
src/package/gtfs/: archive.py  catalog.py  clean.py  clean_test.py  crop.py  dtypes.py  fixtures.py  read.py
src/package/mcr/: bag.py  config.py  data.py  label_test.py  mcr.py  path.py  path_test.py
src/package/mcr5/: h3_osm_interaction.py  labels.py  mcr5.py
src/package/minute_city/: minute_city.py  profile.py
src/package/osm/: graph.py  igraph.py  (+1 more)
test/: conftest.py
(+64 files in other folders)
