[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
authors = [{ name = "ppeter", email = "ppeter1@smail.uni-koeln.de" }]
name = "mcr_py"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = 'mcr_py'
version = "0.1.0"
description = "MCR library in rust and python"
authors = ["ppeter"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "^0.12.5"
shapely = "^2.0.6"
maturin = "^1.7.4"
folium = "^0.17.0"

[tool.poetry.group.dev.dependencies]
maturin = "^1.7.4"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
notebook = "^7.2.2"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "mcr_py._mcr_py"

[tool.ruff]
extend-include = ["*.ipynb"]
